# fraud-detection-system

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api/: routes.py  validators.py
app/core/: fraud_detector.py  network_analyzer.py  pattern_analyzer.py  risk_calculator.py
app/ml/: anomaly_detector.py  feature_engineer.py  fraud_predictor.py  network_clustering.py
app/models/: database.py  user_models.py
app/services/: cache_service.py  data_collector.py  external_apis.py  notification_service.py.py
app/templates/: base.html  dashboard.html  fraud_analysis.html
app/utils/: helpers.py  logger.py  security.py
config/: database_config.py  settings.py
deployment/: deploy.sh
deployment/k8s/: configmap.yaml  namespace.yaml  secret.yaml
docker/nginx/: default.conf  nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
migrations/: create_tables.py  seed_data.py
test/: conftest.py  test_api.py  test_fraud_detection.py  test_models.py  test_performance.py  test_utils.py
